--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
             margin: 0 auto;
         }
 
+        .googlemap{
+            text-align: center;
+            width:auto;
+            margin:auto;
+
+        }
+
         /* Mobile Styles */
         @media (max-width: 768px) {
             .logo {
@@ -180,7 +187,7 @@
             <a href="#gallery">Gallery</a>
             <a href="#contact">Contact</a>
         </nav>
-        <button class="mobile-menu"></button>
+        <button class="mobile-menu">â˜°</button>
     </header>
 
     <section class="hero-slider" id="home">
@@ -239,22 +246,27 @@ as individual staff members we uphold the golden rule, “Raising a healthy next
     </section>
 
     <section class="section" id="gallery">
-        <h2>Our Work</h2>
+        <h2>Our Works</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
                 <img src="slide1.jpg" alt="Education Program">
-                <h3>Education Program</h3>
+                <h3></h3>
             </div>
             <div class="gallery-item">
                 <img src="slide2.jpg" alt="Medical Camp">
                 <h3><h3>
             </div>
             <div class="gallery-item">
-                <img src="slide1.jpg" alt="Community Workshop">
+                <img src="slide5.jpg" alt="Community Workshop">
+                <h3></h3>
+            </div>
+            <div class="gallery-item">
+                <img src="slide6.jpg" alt="Community Workshop">
                 <h3></h3>
             </div>
         </div>
     </section>
+
 
     <section class="contact-section" id="contact">
         <div class="section">
@@ -277,6 +289,10 @@ as individual staff members we uphold the golden rule, “Raising a healthy next
             </div>
         </div>
     </section>
+<div class="googlemap">
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15760.233377739056!2d38.69776340486226!3d9.058442956062416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b89966eae4c6f%3A0xc154a68d0d9124a4!2zQXdlbGlhIE1vc3F1ZSBhcmVhL1dpbmdhdGUv4YuK4YqV4YyM4Ym1IOGKoOGLiOGIiuGLqyDhiJjhiLXhjIrhi7Ug4Yqg4Yqr4Ymj4Ymi!5e0!3m2!1sen!2suk!4v1744888904232!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+
 
     <script>
         // Image Slider
