--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <a href="#gallery">Gallery</a>
             <a href="#contact">Contact</a>
         </nav>
-        <button class="mobile-menu">â˜°</button>
+        <button class="mobile-menu"></button>
     </header>
 
     <section class="hero-slider" id="home">
